@@ -1,3 +1,9 @@
+2008-07-08  Badlop  <badlop@process-one.net>
+
+	* src/mod_xmlrpc.erl (get_roster): Detect if mod_roster or
+	mod_roster_odbc is enabled (thanks to Darren Ferguson)
+	* README.txt: Likewise
+
 2008-05-20  Badlop  <badlop@process-one.net>
 
 	* src/mod_xmlrpc.erl: New call get_roster; works only with
